src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_scroll_offset.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ════════════════════╗
║○ 6: Task number 6 [testing]                              ║
║✗ 7: Task number 7 [testing]                              ║
║✓ 8: Task number 8 [testing]                              ║
║● 9: Task number 9 [testing]                              ║
║○ 10: Task number 10 [testing]                            ║
║✗ 11: Task number 11 [testing]                            ║
║✓ 12: Task number 12 [testing]                            ║
║● 13: Task number 13 [testing]                            ║
║○ 14: Task number 14 [testing]                            ║
║✗ 15: Task number 15 [testing]                            ║
╚══════════════════════════════════════════════════════════╝
