src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_tree_2_levels.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ══════════════════════════════╗
║1 Epic: Backend                                                     ║
║  ✓ 1.1: Database schema [db]                                       ║
║  ● 1.2: API endpoints [api] deps: 1.1                              ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
╚════════════════════════════════════════════════════════════════════╝
