src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_tree_3_levels.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ══════════════════════════════╗
║1 Project: E-commerce                                               ║
║  1.1 Module: Auth                                                  ║
║    ✓ 1.1.1: Login form [ui]                                        ║
║    ● 1.1.2: JWT validation [api] deps: 1.1.1                       ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
╚════════════════════════════════════════════════════════════════════╝
