src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_unicode_emoji_component.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ══════════════════════════════╗
║✓ 1: Setup build tools [🔧 narzędzia]                               ║
║● 2: Create API schema [📡 backend]                                 ║
║○ 3: Design UI mockups [🎨 design]                                  ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
╚════════════════════════════════════════════════════════════════════╝
