src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_unicode_mixed_hierarchy.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ════════════════════════════════════════╗
║1 Projekt: Sklep                                                              ║
║  1.1 Moduł: Logowanie                                                        ║
║    ✓ 1.1.1: Formularz logowania [🎨 frontend]                                ║
║    ● 1.1.2: Walidacja użytkownika [🔐 auth] deps: 1.1.1                      ║
║    ○ 1.1.3: Obsługa błędów [⚠️ errors]                                       ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
╚══════════════════════════════════════════════════════════════════════════════╝
