src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__task_preview__tests__snapshot_unicode_polish_task_name.snap
---
source: src/commands/task/orchestrate/task_preview.rs
expression: snapshot
---
╔ Task List (p to close, ↑↓ to scroll) ══════════════════════════════╗
║● 1: Implementacja żółtych alertów [ui]                             ║
║○ 2: Testy końcowe [tests]                                          ║
║✓ 3: Konfiguracja środowiska [infra]                                ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
║                                                                    ║
╚════════════════════════════════════════════════════════════════════╝
